--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "fast-xml-parser": "^4.0.10",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "cordova-ios": "^6.2.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
     "cordova-res": "^0.15.4",
@@ -65,6 +66,8 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-screen-orientation": {}
     },
-    "platforms": []
+    "platforms": [
+      "ios"
+    ]
   }
 }
