append cordova.js after npm install to public react folder

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ hooks/modules/config.interface.js
 resources/ios
 resources/android/icon
 resources/android/splash
+
+public/plugins
+public/cordova_plugins.js
+public/cordova.js
