--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-cordova",
   "displayName": "react-cordova",
-  "version": "2.0.0",
+  "version": "2.5.0",
   "description": "Sample project start with react typescript 18.* and cordova",
   "homepage": "./",
   "dependencies": {
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "preinstall": "node hooks/before_start.js",
+    "postinstall": "node hooks/after_install.js",
     "prestart": "node hooks/before_start.js",
     "start": "react-scripts start",
     "build": "npm run prestart && react-scripts build",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
     "cordova-res": "^0.15.4",
@@ -65,6 +67,8 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-screen-orientation": {}
     },
-    "platforms": []
+    "platforms": [
+      "browser"
+    ]
   }
 }
