Optimize hooks and append log error

--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     ]
   },
   "devDependencies": {
-    "cordova-browser": "^6.0.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
     "cordova-res": "^0.15.4",
@@ -67,8 +66,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-screen-orientation": {}
     },
-    "platforms": [
-      "browser"
-    ]
+    "platforms": []
   }
 }
